<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pregunta_pizza"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="72dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrera1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <RadioButton
            android:id="@+id/optPizza1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/margarita" />

        <RadioButton
            android:id="@+id/optPizza2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuatro_estaciones" />

        <RadioButton
            android:id="@+id/optPizza3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbonara" />

        <RadioButton
            android:id="@+id/optPizza4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/romana" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtPreguntaExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pregunta_extra"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/barrera1" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrera2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="chipExtra1,chipExtra2,chipExtra3,chipExtra4" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipExtra1"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Queso"
        app:layout_constraintEnd_toStartOf="@+id/chipExtra3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPreguntaExtra" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipExtra2"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jamón"
        app:layout_constraintBottom_toBottomOf="@+id/chipExtra3"
        app:layout_constraintEnd_toStartOf="@+id/chipExtra4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chipExtra3"
        app:layout_constraintTop_toTopOf="@+id/chipExtra3" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipExtra3"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cebolla"
        app:layout_constraintBottom_toBottomOf="@+id/chipExtra1"
        app:layout_constraintEnd_toStartOf="@+id/chipExtra2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chipExtra1"
        app:layout_constraintTop_toTopOf="@+id/chipExtra1" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipExtra4"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salsa"
        app:layout_constraintBottom_toBottomOf="@+id/chipExtra2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chipExtra2"
        app:layout_constraintTop_toTopOf="@+id/chipExtra2" />

    <TextView
        android:id="@+id/txtBebida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pregunta_bebida"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/barrera2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        tools:src="@tools:sample/avatars" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="imageView2,imageView5,imageView4,imageView,imageView6,imageView3"
        app:flow_horizontalGap="8dp"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBebida" />
</androidx.constraintlayout.widget.ConstraintLayout>